# domain-llm-studio

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/eval/: base_1.5b.yaml  base_7b.yaml  default.yaml  dpo_tuned_7b.yaml  prompt_only_1.5b.yaml  prompt_only_7b.yaml  tuned.yaml  tuned_1.5b.yaml  tuned_7b.yaml
configs/tasks/: analysis_gen.yaml  doc_qa.yaml  event_extraction.yaml  fin_summary.yaml
configs/training/: dpo_7b_cloud.yaml  lora_1.5b_local.yaml  lora_7b_cloud.yaml  qlora_7b_cloud.yaml
data/processed/: cleaning_stats.json  data_stats.json  dev.jsonl  test.jsonl  train.jsonl
data/seed/: analysis_gen.jsonl  doc_qa.jsonl  event_extraction.jsonl  fin_summary.jsonl
docs/results/: summary_report.md
experiments/comparison_1.5b/: comparison_report.json  report.md
experiments/comparison_7b/: comparison_report.json  report.md
experiments/comparison_7b_dpo/: comparison_report.json  report.md
experiments/eval/: eval_base.json
experiments/eval_1.5b/: eval_base.json  eval_prompt_only.json  eval_tuned.json
experiments/eval_7b/: eval_base.json  eval_dpo_tuned.json  eval_prompt_only.json  eval_tuned.json
experiments/flywheel_demo/: metrics.json  summary.md
experiments/inference_benchmark/: results.json  summary.md
scripts/: benchmark_inference.py  demo_data_flywheel.py  download_model.py  transfer_results.sh
src/domain_llm_studio/: __init__.py  cli.py  config.py
tests/: test_data_pipeline.py  test_inference.py  test_metrics.py  test_researchops_importer.py  test_vllm_backend.py
(+55 files in other folders)
