[project]
name = "domain-llm-studio"
version = "0.1.0"
description = "A reproducible system for domain-specific LLM adaptation, evaluation, and serving"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.2.0",
    "transformers>=4.40.0",
    "datasets>=2.18.0",
    "peft>=0.10.0",
    "trl>=0.8.0",
    "accelerate>=0.28.0",
    "rouge-score>=0.1.2",
    "bert-score>=0.3.13",
    "jieba>=0.42.1",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "gradio>=4.20.0",
    "typer[all]>=0.12.0",
    "pydantic>=2.6.0",
    "pyyaml>=6.0.1",
    "pandas>=2.2.0",
    "matplotlib>=3.8.0",
    "jinja2>=3.1.3",
    "rich>=13.7.0",
    "sentencepiece>=0.2.0",
    "protobuf>=4.25.0",
]

[project.optional-dependencies]
qlora = ["bitsandbytes>=0.43.0"]
dev = ["pytest>=8.0.0", "ruff>=0.3.0"]

[project.scripts]
domain-llm-studio = "domain_llm_studio.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/domain_llm_studio"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
